--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -9,5 +9,7 @@ $colors: (
   light: #fff,
   dark: #000,
   main: #252b42,
-  second: #737373
+  second: #737373,
+  primary: #ff7b47,
+  sea-green: #0d5c63
 );
