--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,3 +7,5 @@
 // подключения компонентов страницы
 // @import "./components/";
 @import "./components/header";
+@import "./components/promo";
+@import "./components/experience";
