--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -80,6 +80,7 @@ a {
 .title-text {
   font-weight: 700;
   font-size: 24px;
+  line-height: 32px;
   color: map-get($colors, main);
 }
 
@@ -88,4 +89,47 @@ a {
   font-size: 14px;
   line-height: 20px;
   color: map-get($colors, second);
+}
+
+.descr {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: map-get($colors, second);
+
+  &--bigger {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.btn {
+  overflow: hidden;
+  padding: 0 5px;
+  max-width: 100%;
+  font-weight: 700;
+  font-size: 14px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+  &--primary,
+  &--transparent {
+    border-radius: 37px;
+    height: 48px;
+    max-width: 50%;
+  }
+
+  &--primary {
+    min-width: 187px;
+    color: map-get($colors, light);
+    background-color: map-get($colors, primary);
+  }
+
+  &--transparent {
+    @include flex-all-center;
+
+    border: 1px solid map-get($colors, sea-green);
+    min-width: 157px;
+    color: map-get($colors, sea-green);
+  }
 }
