--- a/src/partials/experience.html
+++ b/src/partials/experience.html
@@ -1,31 +1,70 @@
 <section class="experience">
   <div class="container">
-    <div class="row experience__cards-wrapper">
-      <div class="col-4">
-        <div class="experience__card">
-          <svg class="experience__icon">
-            <use xlink:href="img/sprite.svg#experience-icon-1"></use>
+    <div class="finance finance--move-top">
+      <div class="finance__cards-wrapper">
+        <div class="finance__card">
+          <svg class="icon finance__card-icon">
+            <use xlink:href="img/sprite.svg#finance-icon-1"></use>
           </svg>
-          <h2 class="title-text experience__title">Environmental Consulting</h2>
+          <h3 class="title-text finance__card-title">Environmental Consulting</h3>
           <div class="descr">We focus on ergonomics and meeting you where you work.</div>
         </div>
-      </div>
-      <div class="col-4">
-        <div class="experience__card">
-          <svg class="experience__icon">
-            <use xlink:href="img/sprite.svg#experience-icon-2"></use>
+        <div class="finance__card">
+          <svg class="icon finance__card-icon">
+            <use xlink:href="img/sprite.svg#finance-icon-2"></use>
           </svg>
-          <h2 class="title-text experience__title">Finance and consultancy</h2>
-          <div class="descr">Just type what's on your mind and we'll get you there.</div>
+          <h3 class="title-text finance__card-title">Finance and consultancy</h3>
+          <div class="descr">Just type what's on your mind <br> and we'll get you there.</div>
+        </div>
+        <div class="finance__card">
+          <svg class="icon finance__card-icon">
+            <use xlink:href="img/sprite.svg#finance-icon-3"></use>
+          </svg>
+          <h3 class="title-text finance__card-title">Financial Services Consulting</h3>
+          <div class="descr">the quick fox jumps over the <br> lazy dog</div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="experience__card">
-          <svg class="experience__icon">
-            <use xlink:href="img/sprite.svg#experience-icon-3"></use>
-          </svg>
-          <h2 class="title-text experience__title">Financial Services Consulting</h2>
-          <div class="descr">the quick fox jumps over the lazy dog</div>
+    </div>
+
+    <h2 class="title experience__title">Designing Better Experience</h2>
+    <div class="descr text-center experience__descr">
+      Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics
+    </div>
+    <div class="experience__cards-wrapper">
+      <div class="experience__card">
+        <svg class="icon experience__card-icon">
+          <use xlink:href="img/sprite.svg#experience-icon-1"></use>
+        </svg>
+        <h3 class="title experience__card-title">972 +</h3>
+        <div class="info">
+          Consumer Products
+        </div>
+      </div>
+      <div class="experience__card">
+        <svg class="icon experience__card-icon">
+          <use xlink:href="img/sprite.svg#experience-icon-2"></use>
+        </svg>
+        <h3 class="title experience__card-title">181 +</h3>
+        <div class="info">
+          Financial Services
+        </div>
+      </div>
+      <div class="experience__card">
+        <svg class="icon experience__card-icon">
+          <use xlink:href="img/sprite.svg#experience-icon-3"></use>
+        </svg>
+        <h3 class="title experience__card-title">98%</h3>
+        <div class="info">
+          Environmental
+        </div>
+      </div>
+      <div class="experience__card">
+        <svg class="icon experience__card-icon">
+          <use xlink:href="img/sprite.svg#finance-icon-1"></use>
+        </svg>
+        <h3 class="title experience__card-title">746 +</h3>
+        <div class="info">
+          Business & Finance
         </div>
       </div>
     </div>
