--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,5 +1,9 @@
+// mixins
 @import "./mixins/breakpoint";
 @import "./mixins/burger";
 @import "./mixins/font-face";
 @import "./mixins/mini";
 @import "./mixins/tabs";
+
+// patterns
+@import "./mixins/patterns";
