--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,16 +13,14 @@
         </ul>
       </nav>
     </div>
-    <div class="row promo">
-      <div class="col-7">
-        <h1 class="promo__title">Finance and Consultancy <br> Solution</h1>
-        <div class="descr descr--bigger promo__descr">
-          We know how large objects will act, <br> but things on a small scale.
-        </div>
-        <div class="promo__buttons">
-          <button class="btn btn--primary btn-reset promo__btn">Get Quote Now</button>
-          <a class="btn btn--transparent btn-reset promo__btn" href="#">Learn More</a>
-        </div>
+    <div class="promo">
+      <h1 class="promo__title">Finance and Consultancy Solution</h1>
+      <div class="descr descr--bigger promo__descr">
+        We know how large objects will act, <br> but things on a small scale.
+      </div>
+      <div class="promo__buttons">
+        <button class="btn btn--primary btn-reset promo__btn">Get Quote Now</button>
+        <a class="btn btn--transparent btn-reset promo__btn" href="#">Learn More</a>
       </div>
     </div>
   </div>
