--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -67,14 +67,29 @@ a {
   }
 }
 
-// .container {
-//   margin: 0 auto;
-//   padding: 0 map-get($settings, container-offset);
-//   max-width: $container-width;
-// }
+.container {
+  margin: 0 auto;
+  padding: 0 map-get($settings, container-offset);
+  max-width: $container-width;
+}
+
+.icon {
+  width: 48px;
+  height: 48px;
+}
 
 .text-center {
   text-align: center;
+}
+
+.title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 57px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: map-get($colors, main);
 }
 
 .title-text {
@@ -95,6 +110,7 @@ a {
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
+  letter-spacing: 0.2px;
   color: map-get($colors, second);
 
   &--bigger {
@@ -103,14 +119,18 @@ a {
   }
 }
 
+.info {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: map-get($colors, second);
+}
+
 .btn {
-  overflow: hidden;
-  padding: 0 5px;
+  padding: 0 12px;
   max-width: 100%;
   font-weight: 700;
   font-size: 14px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 
   &--primary,
   &--transparent {
@@ -126,10 +146,13 @@ a {
   }
 
   &--transparent {
-    @include flex-all-center;
-
+    display: block;
     border: 1px solid map-get($colors, sea-green);
     min-width: 157px;
+    line-height: 46px;
+    text-align: center;
     color: map-get($colors, sea-green);
   }
+
+  @extend %no-wrap;
 }
