--- a/src/scss/components/_experience.scss
+++ b/src/scss/components/_experience.scss
@@ -1,24 +1,43 @@
 .experience {
+  padding: 0 0 80px;
+  background-color: map-get($colors, section);
+
+  &__title {
+    margin-bottom: 10px;
+  }
+
+  &__descr {
+    margin-bottom: 50px;
+  }
+
   &__cards-wrapper {
-    transform: translateY(-111px);
+    flex-wrap: wrap;
+
+    @extend %flex;
   }
 
   &__card {
-    padding: 35px 40px;
-    width: 328px;
-    min-height: 242px;
-    box-shadow: 0 13px 19px rgb(0 0 0 / 7%);
+    --elements: 4;
+    --margin: 39px;
+
+    margin-bottom: 20px;
+    padding: 30px;
+    width: width-el(var(--elements), var(--margin));
+    min-height: 209px;
+    text-align: center;
     background-color: map-get($colors, light);
+
+    &:not(:nth-child(4n)) {
+      margin-right: var(--margin);
+    }
   }
 
-  &__icon {
-    margin-bottom: 8px;
-    width: 48px;
-    height: 48px;
+  &__card-icon {
+    margin-bottom: 7px;
     fill: map-get($colors, sea-green);
   }
 
-  &__title {
-    margin: 0 0 9px;
+  &__card-title {
+    margin-bottom: 11px;
   }
 }
