--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,13 +1,13 @@
 .header {
   @include image-set("../img/header/header-bg");
-  @include bg-cover;
 
   padding: 37px 0 191px;
+  background-color: map-get($colors, section);
 
   &__nav-wrapper {
-    @include flex-v-center;
-
     margin-bottom: 116px;
+
+    @extend %flex-v-center;
   }
 
   &__logo {
@@ -19,7 +19,7 @@
       content: "";
       position: absolute;
       left: 0;
-      top: -12px;
+      top: -10px;
       width: 100%;
       height: 4px;
       background-color: #c4c4c4;
@@ -27,7 +27,7 @@
   }
 
   &__nav-list {
-    @include flex-v-center;
+    @extend %flex-v-center;
   }
 
   &__nav-item {
@@ -41,4 +41,6 @@
     font-size: 14px;
     color: map-get($colors, second);
   }
+
+  @extend %bg-cover;
 }
