--- a/src/partials/experience.html
+++ b/src/partials/experience.html
@@ -1,7 +1,7 @@
 <section class="experience">
   <div class="container">
     <div class="finance finance--move-top">
-      <div class="finance__cards-wrapper">
+      <div class="cards-wrapper">
         <div class="finance__card">
           <svg class="icon finance__card-icon">
             <use xlink:href="img/sprite.svg#finance-icon-1"></use>
@@ -30,38 +30,26 @@
     <div class="descr text-center experience__descr">
       Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics
     </div>
-    <div class="experience__cards-wrapper">
-      <div class="experience__card">
-        <svg class="icon experience__card-icon">
-          <use xlink:href="img/sprite.svg#experience-icon-1"></use>
-        </svg>
+    <div class="cards-wrapper">
+      <div class="experience__card experience__card--products">
         <h3 class="title experience__card-title">972 +</h3>
         <div class="info">
           Consumer Products
         </div>
       </div>
-      <div class="experience__card">
-        <svg class="icon experience__card-icon">
-          <use xlink:href="img/sprite.svg#experience-icon-2"></use>
-        </svg>
+      <div class="experience__card experience__card--services">
         <h3 class="title experience__card-title">181 +</h3>
         <div class="info">
           Financial Services
         </div>
       </div>
-      <div class="experience__card">
-        <svg class="icon experience__card-icon">
-          <use xlink:href="img/sprite.svg#experience-icon-3"></use>
-        </svg>
+      <div class="experience__card experience__card--enviroment">
         <h3 class="title experience__card-title">98%</h3>
         <div class="info">
           Environmental
         </div>
       </div>
-      <div class="experience__card">
-        <svg class="icon experience__card-icon">
-          <use xlink:href="img/sprite.svg#finance-icon-1"></use>
-        </svg>
+      <div class="experience__card experience__card--business">
         <h3 class="title experience__card-title">746 +</h3>
         <div class="info">
           Business & Finance
