--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,4 @@
 @import "./components/promo";
 @import "./components/experience";
 @import "./components/finance";
+@import "./components/advices";
