--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -124,6 +124,10 @@ a {
   font-size: 16px;
   line-height: 24px;
   color: map-get($colors, second);
+
+  &--color-ebony {
+    color: map-get($colors, main);
+  }
 }
 
 .btn {
@@ -155,4 +159,10 @@ a {
   }
 
   @extend %no-wrap;
+}
+
+.cards-wrapper {
+  @include flex;
+
+  flex-wrap: wrap;
 }
