--- a/src/scss/mixins/_mini.scss
+++ b/src/scss/mixins/_mini.scss
@@ -1,39 +1,39 @@
 /* stylelint-disable */
 
-// @mixin bg-cover {
-//   background-position: center;
-//   background-size: cover;
-//   background-repeat: no-repeat;
-// }
+@mixin bg-cover {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-// @mixin flex {
-//   display: flex;
-// }
+@mixin flex {
+  display: flex;
+}
 
-// @mixin flex-v-center {
-//   display: flex;
-//   align-items: center;
-// }
+@mixin flex-v-center {
+  display: flex;
+  align-items: center;
+}
 
-// @mixin flex-h-center {
-//   display: flex;
-//   justify-content: center;
-// }
+@mixin flex-h-center {
+  display: flex;
+  justify-content: center;
+}
 
-// @mixin flex-all-center {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
+@mixin flex-all-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-// @mixin flex-all-sb {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
+@mixin flex-all-sb {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
 @mixin bg-img($path) {
-  background: url("#{$path}");
+  background-image: url("#{$path}");
 }
 
 @function rem($pixels, $context: map-get($settings, font-size)) {
@@ -44,7 +44,7 @@
   @return calc((100% - ($margin * ($elements - 1))) / $elements);
 }
 
-@mixin image-set($pathToImage) {
+@mixin image-set($pathToImage, $bg-color) {
   background-image: url("#{$pathToImage}.jpg");
   /* stylelint-disable-next-line declaration-block-no-duplicate-properties */
   background-image: image-set(
@@ -53,4 +53,5 @@
     "#{$pathToImage}.webp"type("image/webp"),
     "#{$pathToImage}.jpg"type("image/jpg")
   );
+  background-color: $bg-color;
 }
