sectionAbout and sectionPartners were created

--- a/src/partials/experience.html
+++ b/src/partials/experience.html
@@ -14,21 +14,21 @@
             <use xlink:href="img/sprite.svg#finance-icon-2"></use>
           </svg>
           <h3 class="title-text finance__card-title">Finance and consultancy</h3>
-          <div class="descr">Just type what's on your mind <br> and we'll get you there.</div>
+          <div class="descr">Just type what's on your mind and we'll get you there.</div>
         </div>
         <div class="finance__card">
           <svg class="icon finance__card-icon">
             <use xlink:href="img/sprite.svg#finance-icon-3"></use>
           </svg>
           <h3 class="title-text finance__card-title">Financial Services Consulting</h3>
-          <div class="descr">the quick fox jumps over the <br> lazy dog</div>
+          <div class="descr">the quick fox jumps right over the lazy dog</div>
         </div>
       </div>
     </div>
 
     <h2 class="title experience__title">Designing Better Experience</h2>
     <div class="descr text-center experience__descr">
-      Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics
+      Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics
     </div>
     <div class="cards-wrapper">
       <div class="experience__card experience__card--products">
