--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
     <div class="promo">
       <h1 class="promo__title">Finance and Consultancy Solution</h1>
       <div class="descr descr--bigger promo__descr">
-        We know how large objects will act, <br> but things on a small scale.
+        We know how large objects will act, but things on a small scale.
       </div>
       <div class="promo__buttons">
         <button class="btn btn--primary btn-reset promo__btn">Get Quote Now</button>
