--- a/src/scss/components/_promo.scss
+++ b/src/scss/components/_promo.scss
@@ -1,8 +1,9 @@
 .promo {
-  max-width: 600px;
+  max-width: 410px;
 
   &__title {
-    margin: 0 0 34px;
+    margin: 0;
+    margin-bottom: 34px;
     font-weight: 800;
     font-size: 58px;
     line-height: 80px;
