--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,8 @@
 @import "./components/experience";
 @import "./components/finance";
 @import "./components/advices";
+@import "./components/about";
+@import "./components/video-block";
+@import "./components/about-list";
+@import "./components/partners";
+@import "./components/subscribe";
