--- a/src/scss/mixins/_mini.scss
+++ b/src/scss/mixins/_mini.scss
@@ -32,6 +32,13 @@
   justify-content: space-between;
 }
 
+@mixin absolute-all-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @mixin bg-img($path) {
   background-image: url("#{$path}");
 }
