--- a/src/partials/advices.html
+++ b/src/partials/advices.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="title advices__title">Practice Advice</h2>
     <div class="descr text-center advices__descr">
-      Problems trying to resolve the conflict between <br> the two major realms of Classical physics: Newtonian mechanics
+      Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics
     </div>
 
     <div class="cards-wrapper">
