--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -90,6 +90,10 @@ a {
   letter-spacing: 0.2px;
   text-align: center;
   color: map-get($colors, main);
+
+  &--text-left {
+    text-align: left;
+  }
 }
 
 .title-text {
@@ -97,6 +101,10 @@ a {
   font-size: 24px;
   line-height: 32px;
   color: map-get($colors, main);
+
+  &--white {
+    color: map-get($colors, light);
+  }
 }
 
 .title-descr {
@@ -127,6 +135,11 @@ a {
 
   &--color-ebony {
     color: map-get($colors, main);
+  }
+
+  &--semi-bold {
+    font-weight: 600;
+    font-size: 14px;
   }
 }
 
