--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,7 +8,7 @@
     <div class="about__content">
       <div class="video-block">
         <video class="video-block__content" src="video/about-video.mp4" muted loop preload="metadata" data-video="video"></video>
-        <button class="btn-reset video-block__btn-play" data-video="btn"></button>
+        <button class="btn-reset video-block__btn-play" aria-label="Play video" data-video="btn"></button>
       </div>
       <div class="about__content-text">
         <h2 class="title title--text-left about__content-title">Most trusted in our field</h2>
