--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,3 +16,4 @@
 @import "./components/about-list";
 @import "./components/partners";
 @import "./components/subscribe";
+@import "./components/in-touch";
