--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -7,7 +7,6 @@
   padding: 30px 40px 30px 50px;
   max-width: 986px;
   background-color: map-get($colors, stone);
-  transform: translateY(50px);
 
   &__title {
     margin: 0;
@@ -17,7 +16,18 @@
   &__form {
     @include flex;
 
+    position: relative;
     height: 58px;
+
+    &::before {
+      content: "Write your email correct";
+      position: absolute;
+      left: 0;
+      top: -24px;
+      display: none;
+      font-weight: 900;
+      color: #fff;
+    }
   }
 
   &__input {
@@ -25,6 +35,7 @@
     border-radius: 5px 0 0 5px;
     padding: 0 20px;
     width: 333px;
+    height: 100%;
     font-weight: 400;
     font-size: 14px;
     color: map-get($colors, second);
