--- a/src/partials/advices.html
+++ b/src/partials/advices.html
@@ -8,25 +8,25 @@
     <div class="cards-wrapper">
       <div class="advices__card advices__card--truth">
         <h3 class="info info--color-ebony advices__card-title">A single source of truth</h3>
-        <div class="descr">
+        <div class="descr advices__card-descr">
           Newton thought that light was made up of particles, but then it was discovered
         </div>
       </div>
       <div class="advices__card advices__card--organize">
         <h3 class="info info--color-ebony advices__card-title">Fastest way to organize</h3>
-        <div class="descr">
+        <div class="descr advices__card-descr">
           “Quantum mechanics” is the description of the behaviour of matter
         </div>
       </div>
       <div class="advices__card advices__card--action">
         <h3 class="info info--color-ebony advices__card-title">Fastest way to take action</h3>
-        <div class="descr">
+        <div class="descr advices__card-descr">
           They describe a universe consisting of bodies moving
         </div>
       </div>
       <div class="advices__card advices__card--together">
         <h3 class="info info--color-ebony advices__card-title">Work better together</h3>
-        <div class="descr">
+        <div class="descr advices__card-descr">
           They finally obtained a consistent description of the behaviour
         </div>
       </div>
