--- a/src/partials/experience.html
+++ b/src/partials/experience.html
@@ -7,21 +7,21 @@
             <use xlink:href="img/sprite.svg#finance-icon-1"></use>
           </svg>
           <h3 class="title-text finance__card-title">Environmental Consulting</h3>
-          <div class="descr">We focus on ergonomics and meeting you where you work.</div>
+          <div class="descr finance__card-descr">We focus on ergonomics and meeting you where you work.</div>
         </div>
         <div class="finance__card">
           <svg class="icon finance__card-icon">
             <use xlink:href="img/sprite.svg#finance-icon-2"></use>
           </svg>
           <h3 class="title-text finance__card-title">Finance and consultancy</h3>
-          <div class="descr">Just type what's on your mind and we'll get you there.</div>
+          <div class="descr finance__card-descr">Just type what's on your mind and we'll get you there.</div>
         </div>
         <div class="finance__card">
           <svg class="icon finance__card-icon">
             <use xlink:href="img/sprite.svg#finance-icon-3"></use>
           </svg>
           <h3 class="title-text finance__card-title">Financial Services Consulting</h3>
-          <div class="descr">the quick fox jumps right over the lazy dog</div>
+          <div class="descr finance__card-descr">the quick fox jumps right over the lazy dog</div>
         </div>
       </div>
     </div>
