--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,13 +5,16 @@
         Relvise
       </div>
       <nav class="header__nav" title="header-navigation">
-        <ul class="header__nav-list">
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Home</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Product</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Pricing</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Contact</a></li>
+        <ul class="header__nav-list" data-menu>
+          <li class="header__nav-item" data-menu-item><a href="#" class="header__nav-link">Home</a></li>
+          <li class="header__nav-item" data-menu-item><a href="#" class="header__nav-link">Product</a></li>
+          <li class="header__nav-item" data-menu-item><a href="#" class="header__nav-link">Pricing</a></li>
+          <li class="header__nav-item" data-menu-item><a href="#" class="header__nav-link">Contact</a></li>
         </ul>
       </nav>
+      <button class="burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
+        <span class="burger__line"></span>
+      </button>
     </div>
     <div class="promo">
       <h1 class="promo__title">Finance and Consultancy Solution</h1>
