--- a/src/scss/components/_advices.scss
+++ b/src/scss/components/_advices.scss
@@ -17,7 +17,7 @@
     --margin: 39px;
 
     margin-bottom: 20px;
-    padding: 30px;
+    padding: 30px 30px 150px;
     width: width-el(var(--elements), var(--margin));
     min-height: 340px;
     background-position: center bottom;
