--- a/src/scss/components/_in-touch.scss
+++ b/src/scss/components/_in-touch.scss
@@ -1,5 +1,5 @@
 .in-touch {
-  padding: 80px 0;
+  padding: 80px 0 178px;
   background-color: #f3f3f3;
 
   &__title {
@@ -23,7 +23,7 @@
     @include flex-v-center;
 
     flex-direction: column;
-    padding: 50px 40px;
+    padding: 50px 20px;
     width: width-el(var(--elements), var(--margin));
     background-color: map-get($colors, light);
     cursor: pointer;
